<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/GameImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:contentDescription="@string/image_desc"
        app:srcCompat="@android:color/darker_gray" />

    <Button
        android:id="@+id/TitleOneButton"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="buttonOnClick"
        android:text="@string/ButtonOneDefault" />

    <Button
        android:id="@+id/TitleTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="buttonOnClick"
        android:text="@string/ButtonTwoDefault" />

    <Button
        android:id="@+id/TitleThreeButton"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="buttonOnClick"
        android:text="@string/ButtonThreeDefault" />

    <Button
        android:id="@+id/TitleFourButton"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="buttonOnClick"
        android:text="@string/ButtonFourDefault" />
</LinearLayout>